fixing prices length wrapping

--- a/static/css/components/read-panel.less
+++ b/static/css/components/read-panel.less
@@ -96,10 +96,6 @@
   font-size: 12px;
 }
 
-.buy-options-table {
-  white-space: nowrap;
-}
-
 .waitinglist-message {
   white-space: nowrap;
   margin: 0 0 10px;
